Configuraciones varias del Form1: -Aparecer centrada en la pantalla -Impedir modificar el tamaño de las ventanas

--- a/WinFormsApp1/Signup.resx
+++ b/WinFormsApp1/Signup.resx
@@ -57,4 +57,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFBQAAAEAIAC4BgAAFgAAACgAAAAUAAAAKAAAAAEAIAAAAAAAQAYAALEAAACxAAAAAAAAAAAA
+        AAAAAADUAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        ANMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO4AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA7AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAxgAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADDAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB8AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AHkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACsAAADbAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAADcAAAAKwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAFsAAADmAAAA/gAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD+AAAA5gAAAFkAAAAFAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAADgAAAGoAAADVAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/AAAANUAAABqAAAADgAA
+        AAAAAAALAAAAQQAAACAAAAAAAAAAAAAAAAAAAAAAAAAACgAAAEcAAACXAAAA0gAAAPAAAAD6AAAA8AAA
+        ANIAAACXAAAARgAAAAkAAAAAAAAAAAAAACYAAADhAAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABMAAAA3AAAASwAAAFEAAABLAAAANwAAABMAAAAAAAAAAAAAAAAAAAAAAAAAKwAAAP8AAACAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbAAA
+        AMwAAADcAAAA/wAAAOoAAADVAAAAqgAAAAAAAAAAAAAAAAAAAAMAAAAiAAAAkQAAAN0AAAD1AAAA3AAA
+        AJEAAAAiAAAAAwAAAAAAAABtAAAAzAAAANwAAAD/AAAA6gAAANUAAACrAAAAAAAAAAAAAAABAAAAOwAA
+        AMgAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAMgAAAA7AAAAAQAAAAAAAAAAAAAAKwAAAP8AAACAAAAAAAAA
+        AAAAAAAAAAAAAAAAAB0AAACtAAAA+wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+wAAAK0AAAAdAAAAAAAA
+        AAAAAAAmAAAA4gAAAHEAAAAAAAAAAAAAAAAAAAAAAAAAVQAAAOMAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA4gAAAFQAAAAAAAAAAAAAAAsAAABBAAAAIQAAAAAAAAAAAAAAAAAAAAAAAAB2AAAA+QAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD4AAAAdQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAHYAAAD5AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPkAAAB2AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVQAAAOMAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA4gAAAFQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdAAAArgAA
+        APsAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPsAAACtAAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAEAAAA7AAAAyQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAyAAAADsAAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAjAAAAkwAAAN0AAAD2AAAA3QAA
+        AJIAAAAiAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHwAAAB8AAAAfAAAAHwAAAB
+        8AAAAfAAgAIwAMAGMADwHjAA//gAAOAIAADABjAAwAYwAMAGMADAB/AAwAfwAMAH8ADAB/AAwAfwAOAP
+        8AA=
+</value>
+  </data>
 </root>
