Se creó y genero el Form Detalles: - Aspecto - Botones - listados de (cajas de ahorro, Movimientos, Pagos) - Icono del Form

--- a/WinFormsApp1/Detalles.resx
+++ b/WinFormsApp1/Detalles.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,4 +57,66 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFBQAAAEAIAC4BgAAFgAAACgAAAAUAAAAKAAAAAEAIAAAAAAAQAYAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAGAAAAHwAAACcAAAAoAAAAKAAAACgAAAAoAAAAKAAAACgAAAAoAAAAKAAAACgAAAAoAAAAKAAA
+        ACUAAAASAAAABAAAADUAAACgAAAANwAAAE4AAADMAAAA4gAAAOMAAADjAAAA4wAAAOMAAADjAAAA4wAA
+        AOMAAADjAAAA4wAAAOMAAADjAAAA2gAAAG8AAAA3AAAAugAAAOkAAABoAAAArgAAAM0AAABpAAAAZgAA
+        AGYAAABmAAAAZgAAAGYAAABmAAAAZgAAAGYAAABmAAAAbQAAAHsAAABuAAAAbQAAALkAAADlAAAAfwAA
+        ABAAAADBAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAAD8AAACdAAAAuAAA
+        AKYAAADEAAAA6AAAAH0AAAATAAAAAAAAAMIAAACoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAApAAAAzgAAALkAAACBAAAAvgAAAPMAAACLAAAADwAAAAAAAAAAAAAAwgAAAKgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYAAAC7AAAAGgAAAAAAAAAFAAAAzwAAAIYAAAAAAAAAAAAA
+        AAAAAADCAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlwAAAK0AAAAJAAAAAAAA
+        AAEAAAC3AAAAkwAAAAAAAAAAAAAAAAAAAMIAAACoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABdAAAA0AAAAF0AAAAnAAAAUQAAANoAAABhAAAAAAAAAAAAAAAAAAAAwgAAAKgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAAACUAAAA0gAAAMQAAADbAAAAiwAAABQAAAAAAAAAAAAA
+        AAAAAADCAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAABMAAAA+AAAAXQAA
+        AD4AAAAXAAAAEgAAAAAAAAAAAAAAAAAAAMIAAACoAAAANgAAALwAAADkAAAA5AAAAOQAAADkAAAA5AAA
+        AOQAAADkAAAAqQAAABoAAAAAAAAAJQAAANQAAABQAAAAAAAAAAAAAAAAAAAAwgAAAKgAAAAhAAAAdQAA
+        AI4AAACOAAAAjgAAAI4AAACOAAAAjgAAAI4AAABqAAAAEAAAAAAAAAAyAAAA6QAAAFAAAAAAAAAAAAAA
+        AAAAAADCAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ADIAAADpAAAAUAAAAAAAAAAAAAAAAAAAAMIAAACoAAAAAAAAAAIAAAACAAAAAgAAAAIAAAACAAAAAgAA
+        AAIAAAACAAAAAQAAAAAAAAAAAAAAMgAAAOkAAABQAAAAAAAAAAAAAAAAAAAAwgAAAKgAAAAzAAAAsAAA
+        ANUAAADVAAAA1QAAANUAAADVAAAA1QAAANUAAACeAAAAGQAAAAAAAAAyAAAA6QAAAFAAAAAAAAAAAAAA
+        AAAAAADCAAAAqAAAACQAAAB/AAAAmgAAAJoAAACaAAAAmgAAAJoAAACaAAAAmgAAAHIAAAASAAAAAAAA
+        ADIAAADpAAAAUAAAAAAAAAAAAAAAAAAAAMIAAACoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAMgAAAOkAAABQAAAAAAAAAAAAAAAAAAAAwgAAAKgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAyAAAA6AAAAFAAAAAAAAAAAAAA
+        AAAAAACtAAAA1QAAAH8AAAB9AAAAfQAAAH0AAAB9AAAAfQAAAH0AAAB9AAAAfQAAAH0AAAB9AAAAfQAA
+        AJwAAADkAAAAPgAAAAAAAAAAAAAAAAAAAEUAAADWAAAA8wAAAPQAAAD0AAAA9AAAAPQAAAD0AAAA9AAA
+        APQAAAD0AAAA9AAAAPQAAAD0AAAA8AAAAJAAAAAKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH8AAAD+A
+        EAA/gDAAP4RwAD+AcAA/gHAAP8BwAAAAcAAABHAAP/xwAAAMcAAABHAAAARwAD/8cAA//HAAAABwAAAA
+        cAA=
+</value>
+  </data>
 </root>
