Form Transferir: - Creación de botones - Cuenta origen y destino - Ícono del Form - Labels para info de saldo, monto  saldo final - Botones de: ° Confirmar transacción ° Añadir caja de ahorro

--- a/WinFormsApp1/Transferencias.resx
+++ b/WinFormsApp1/Transferencias.resx
@@ -57,4 +57,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFBQAAAEAIAC4BgAAFgAAACgAAAAUAAAAKAAAAAEAIAAAAAAAQAYAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAMAAAAbQAAANsAAABDAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAHIAAADuAAAAywAAADkAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAABxAAAA5AAA
+        ANwAAABKAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAALAAAAcAAAAOQAAADZAAAAUwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4AAADtAAAA+gAAALMAAAB3AAAAcQAAAHEAAABxAAAAcQAA
+        AHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABIAAAA5AAAAP8AAAD+AAAA9QAA
+        APEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADxAAAA8QAA
+        AN0AAABnAAAA4QAAAPwAAADBAAAAegAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAA
+        AHEAAABxAAAAcQAAAHEAAABxAAAASQAAAAoAAABmAAAA3QAAAN0AAABjAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0AAABmAAAA4QAA
+        AOMAAABWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAoAAABqAAAA7QAAANYAAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPgAA
+        AMEAAABWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABWAAAAwQAAAD0AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABAAAAA1gAAAO0AAABqAAAACwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSAAAA4QAAAOMAAABqAAAADgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABfAAAA2wAAAN8AAABqAAAACwAAAEkAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAA
+        AHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHoAAADAAAAA/AAAAOMAAABnAAAA3gAAAPEAAADxAAAA8QAA
+        APEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPEAAADxAAAA8QAAAPUAAAD+AAAA/wAA
+        AOIAAABJAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAA
+        AHEAAAB3AAAAsgAAAPoAAADuAAAAbQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAFAAAADWAAAA5gAAAHQAAAAMAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAABGAAAA2QAAAOYAAAB2AAAAEgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOQAA
+        AMkAAADuAAAAcwAAABIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABEAAAA3AAAAG0AAAAMAAAAAAAAAAAAAAAA4f/wAMH/8ACB//AAA//wAAAA
+        AAAAAAAAAAAAAAP/8ACB/fAAwfjwAOH4MADz+BAA//wAAAAAAAAAAAAAAAAAAP/8AAD/+BAA//gwAP/4
+        cAA=
+</value>
+  </data>
 </root>
