--- a/WinFormsApp1/Properties/Resources.resx
+++ b/WinFormsApp1/Properties/Resources.resx
@@ -139,4 +139,8 @@
   <data name="ojos-cruzados" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ojos-cruzados.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ConnectionStr" xml:space="preserve">
+    <value>Data Source=DESKTOP-3GG6OR4\SQLEXPRESS;Initial Catalog=Bank;Integrated Security=True</value>
+    <comment>Cadena de conexión a la base local</comment>
+  </data>
 </root>
